--- a/Week04.ipynb
+++ b/Week04.ipynb
@@ -654,7 +654,7 @@
         "elif age >= 17:\n",
         "  print(\"boleh membuat sim\")\n",
         "else:\n",
-        "  print(\"\")\n"
+        "  print(\"bebas\")\n"
       ],
       "metadata": {
         "colab": {
@@ -663,7 +663,7 @@
         "id": "4rAcu-5jtMmV",
         "outputId": "3f7e4456-39dd-4a15-9e9a-f2d4c92a1620"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,13 +676,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Tonuq6f1vZnb",
-        "outputId": "786a9ad2-a6fa-4c43-9284-9b3e178f876b"
+        "outputId": "a4ec0f71-e34b-42ea-f867-390985e3248a"
       },
       "outputs": [
         {
@@ -698,7 +698,7 @@
         "# Membuat kode dari flowchart\n",
         "\n",
         "#age = 17\n",
-        "age = 12\n",
+        "age = 10\n",
         "\n",
         "if age < 17:\n",
         "    print(\"Tidak boleh membuat sim\" )\n",
@@ -708,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -779,22 +779,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         },
         "id": "SbVXnWlzL_jx",
-        "outputId": "889ed58e-7e07-438f-e3a4-a440fe3e6e3f"
+        "outputId": "34ef8a10-c47d-489e-f483-05d9738013b5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "nilai = D\n"
+            "niali = A\n"
           ]
         }
       ],
@@ -803,35 +801,35 @@
         "# membuat kode program berdasarkan data\n",
         "\n",
         "# nilai = 80.50\n",
-        "nilai = 80.50\n",
+        "nilai = 90.00\n",
         "\n",
-        "if nilai 80.00 <= nilai <= 100:\n",
+        "if nilai >= 80.00:\n",
         "  print(\"niali = A\")\n",
-        "elif nilai 77.50 <= nilai <= 79.99:\n",
+        "elif nilai >= 77.50:\n",
         "  print(\"nilai = A-\")\n",
-        "elif nilai 75.00 <= nilai <= 77.49:\n",
+        "elif nilai >= 75.00:\n",
         "  print(\"nilai = A/B\")\n",
-        "elif nilai 72.50 <= nilai <= 74.99:\n",
+        "elif nilai >= 72.50:\n",
         "  print(\"nilai = B+\")\n",
-        "elif nilai 70.00 <= nilai <= 72.49:\n",
+        "elif nilai >= 70.00:\n",
         "  print(\"nilai = B\")\n",
-        "elif nilai 67.50 <= nilai <= 69.99:\n",
+        "elif nilai >=  67.50:\n",
         "  print(\"nilai = B-\")\n",
-        "elif nilai 65.00 <= nilai <= 67.49:\n",
+        "elif nilai >=65.00:\n",
         "  print(\"nila = B/C\")\n",
-        "elif nilai 62.50 <= nilai <= 64.99:\n",
+        "elif nilai >= 62.50:\n",
         "  print(\"nilai = C+\")\n",
-        "elif nilai 60.00 <= nilai <= 64.99:\n",
+        "elif nilai >= 60.00:\n",
         "  print(\"nilai = C\")\n",
-        "elif nilai 55.00 = nilai <= 59.99:\n",
+        "elif nilai >= 55.00:\n",
         "  print(\"nilai = C-\")\n",
-        "elif nilai 50.00 <= nilai <= 54.99:\n",
+        "elif nilai >= 50.00:\n",
         "  print(\"nilai = C/D\")\n",
-        "elif nilai 45.00 <= nilai <= 49.99:\n",
+        "elif nilai >= 45.00:\n",
         "  print(\"nilai = D+\")\n",
-        "elif nilai 40.00 <= nilai  49.99:\n",
+        "elif nilai >= 40.00:\n",
         "  print(\"nilai = D\")\n",
-        "else nilai < 40.00:\n",
+        "else:\n",
         "  print(\"nilai = E\")"
       ]
     },
@@ -848,7 +846,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcemHc7HBt6BFEy+oG8i3n",
+      "authorship_tag": "ABX9TyMfjg1MWcnyNGCzyfZHrfk4",
       "include_colab_link": true
     },
     "kernelspec": {
